Dodan novi dijagram stanja

--- a/dokumentacija/Arhitektura.tex
+++ b/dokumentacija/Arhitektura.tex
@@ -33,7 +33,9 @@
 		
 
 				
-		Za potrebe sustava za zamjenu soba koristit ćemo relacijsku bazu podataka koja nam omogućuje oblikovanje objekata iz stvarnog svijeta pomoću povezanih tablica - relacija. Svaka je tablica definirana vlastitim nazivom i skupom različitih atributa koji je opisuju. Glavna je zadaća baze podataka pohrana, brzo pronalaženje i dohvaćanje te dodavanje i brisanje podataka. Baza podataka ovog sustava sastoji se od entiteta:
+		\section{Baza podataka}
+			
+	Za potrebe sustava za zamjenu soba koristit ćemo relacijsku bazu podataka koja nam omogućuje oblikovanje objekata iz stvarnog svijeta pomoću povezanih tablica - relacija. Svaka je tablica definirana vlastitim nazivom i skupom različitih atributa koji je opisuju. Glavna je zadaća baze podataka pohrana, brzo pronalaženje i dohvaćanje te dodavanje i brisanje podataka. Baza podataka ovog sustava sastoji se od entiteta:
 	\begin{itemize}
 		\item Student
 		\item Oglas
@@ -563,8 +565,7 @@
 		\section{Dijagram stanja}
 		
 		
-		Dijagram stanja je ponašajni UML dijagram koji opisuje dinamično ponašanje nekog dijela sustava prikazom konačnog broja stanja objekata te prijelaze između stanja koji su potaknuti događajima. Na dijagramu na slici 4.7 prikazan je dijagram stanja za prijavljenog korisnika. Kada se korisnik prijavi (ili registrira) prikazuje mu se početna stranica na kojoj su vidljivi oglasi koji odgovaraju njegovim kriterijima. Za svaki oglas korisnik može vidjeti dodatne informacije o sobi. Klikom na "Moj profil" prikazuju se svi podaci koje korisnik može ažurirati (osim podatka JMBAG te korisničkog imena). Također može izbrisati svoj profil. Klikom na "Moja soba" korisnik u formu unosi podatke o svojoj sobi te opcionalan komentar, dok klikom na "Tražim sobu" postavlja željene kriterije za traženu sobu.
-		
+		Dijagram stanja ponašajni je UML dijagram koji opisuje dinamično ponašanje nekog dijela sustava prikazom konačnog broja stanja objekata te prijelaze između stanja koji su potaknuti događajima. Na dijagramu na slici 4.7 prikazan je dijagram stanja za prijavljenog korisnika. Kada se korisnik prijavi (ili registrira) prikazuje mu se početna stranica na kojoj su mu vidljivi svi oglasi i oglasi koji odgovaraju njegovim kriterijima, ako ih je postavio. Za svaki oglas korisnik može vidjeti dodatne informacije o sobi. Klikom na "Profil" prikazuju se svi podaci. Korisnik te podatke može ažurirati (osim podatka JMBAG te korisničkog imena). Također može izbrisati svoj profil. Klikom na ikonu zvona korisnik u padajućem izborniku može vidjeti nepročitane i pročitane obavijesti (ili poruku da nema obavijesti). Ako korisnik prethodno nije unio podatke o svojoj sobi, klikom na "Oglasi" prikazuje mu se forma za ponudu sobe u kojoj upisuje podatke o svojoj sobi. Nakon potvrde unosa prikazuje mu se i dodatna forma za traženje sobe u kojoj navodi tražene kriterije. Ako je korisnik već bio unio informacije o svojoj sobi, klikom na "Oglasi" odmah mu se prikazuju obje forme. Također, korisnik može mijenjati podatke i o svojoj sobi i o traženim kriterijima. Promjene se spremaju klikom na "Spremi promjene" na formama.
 		\begin{figure}[H]
 			\includegraphics[scale=0.4]{dijagrami/dijagramStanja} %veličina slike u odnosu na originalnu datoteku i pozicija slike
 			\centering
@@ -577,15 +578,23 @@
 		
 		\section{Dijagram aktivnosti}
 		
-		\textbf{\textit{dio 2. revizije}}\\
-		
-		\textit{Potrebno je priložiti dijagram aktivnosti s pripadajućim opisom. Dijagram aktivnosti treba prikazivati značajan dio sustava.}
+		\begin{figure}[H]
+			\includegraphics[scale=0.4]{dijagrami/dijagramAktivnosti} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+			\centering
+			\caption{Dijagram aktivnosti}
+			\label{fig:dijagramAktivnosti}
+		\end{figure}
 		
 		\eject
 		\section{Dijagram komponenti}
 		
-		\textbf{\textit{dio 2. revizije}}\\
 		
-		\textit{Potrebno je priložiti dijagram komponenti s pripadajućim opisom. Dijagram komponenti treba prikazivati strukturu cijele aplikacije.}
+		
+		\begin{figure}[H]
+			\includegraphics[scale=0.4]{dijagrami/dijagramKomponenti} %veličina slike u odnosu na originalnu datoteku i pozicija slike
+			\centering
+			\caption{Dijagram komponenti}
+			\label{fig:dijagramKomponenti}
+		\end{figure}
 		
 		
