Ispravak podataka za registraciju

--- a/dokumentacija/Opis_projektnog_zadatka.tex
+++ b/dokumentacija/Opis_projektnog_zadatka.tex
@@ -13,16 +13,17 @@
 			\item e-mail adresa
 			\item lozinka
 			\item jmbag
+			\item grad u kojem studira
 		\end{itemize} 
 		Prijavljenom korisniku omogućen je pregled njegova profila na kojemu može vidjeti i uređivati svoje osobne podatke i sliku profila, ili izbrisati svoj račun. Također, na pregledu "Moji oglasi" ima uvid u vlastite predane oglase koji mogu biti aktivni ili neaktivni. Aktivni oglas može dodatno uređivati ili ga učiniti neaktivnim.\\
 		Kod predaje oglasa za zamjenu sobe student o sobi koju 'nudi' navodi sljedeće informacije:
 		\begin{itemize}
-			\item grad
 			\item dom
 			\item paviljon
 			\item kat
 			\item broj kreveta 
 			\item tip kupaonice
+			\item komentar
 		\end{itemize}
 		Dodatno, student u tekstualno polje ima opciju upisa dodatnih značajki sobe, poput najbliže menze i slično. Osim informacija o svojoj sobi, student navodi i informacije o sobi koju želi, to jest željene kriterije. Jedino se ograničenje odnosi na grad - student ne može tražiti zamjenu u drugom gradu. Ostali kriteriji mogu biti i višestruki, na primjer može označiti da mu odgovaraju sobe s jednim, dva ili tri kreveta.\\
 		Nakon što preda oglas, student ima uvid u ostale aktivne oglase koji odgovaraju njegovim željenim kriterijima. Ti oglasi mogu biti prikazani kao pojedinačni ili ulančani. Sve ponuđene oglase student može ocijeniti po stupnjevima podudaranja kriterija:
