--- a/dokumentacija/springRolice_rev1.tex
+++ b/dokumentacija/springRolice_rev1.tex
@@ -116,6 +116,7 @@
 	\include{Specifikacija_programske_potpore}
 	\include{Arhitektura}
 	\include{Implementacija}
+	\include{Zakljucak}
     \include{Literatura}
 	
 	
