--- a/dokumentacija/Zakljucak.tex
+++ b/dokumentacija/Zakljucak.tex
@@ -1,9 +1,9 @@
 \chapter{Zaključak i budući rad}
 		
-		\textbf{\textit{dio 2. revizije}}\\
-		
-		 \textit{U ovom poglavlju potrebno je napisati osvrt na vrijeme izrade projektnog zadatka, koji su tehnički izazovi prepoznati, jesu li riješeni ili kako bi mogli biti riješeni, koja su znanja stečena pri izradi projekta, koja bi znanja bila posebno potrebna za brže i kvalitetnije ostvarenje projekta i koje bi bile perspektive za nastavak rada u projektnoj grupi.}
-		
-		 \textit{Potrebno je točno popisati funkcionalnosti koje nisu implementirane u ostvarenoj aplikaciji.}
+		Naš projektni zadatak bio je razviti web aplikaciju pod nazivom "Zamjena sobe" koja bi studentima omogućila organiziranu razmjenu soba u studentskim domovima, a djelatnicima u studentskim centrima omogućila izravan pristup zamjenama koje mogu provesti. Tijekom dva ciklusa naš je tim uložio mnogo vremena i truda u ostvarenje projektnog cilja. Rad na projektu bio je ostvaren kroz dvije glavne faze.
+		 \\Prva je faza obuhvatila upoznavanje i formiranje razvojnog tima, upoznavanje s dodijeljenim zadatkom te planiranje rada i podjela uloga. U toj su fazi razrađeni funkcionalni i nefunkcionalni zahtjevi koji su, uz tekstualne opise, bili popraćeni i UML dijagramima obrazaca uporabe, sekvencijskim dijagramima, dijagramima razreda te ER dijagramom baze podataka. Uz razradu zahtjeva, definirala se i arhitektura sustava kao i tehnologije koje će se koristiti za samu implementaciju. Ova je faza postavila temelje razvoja i olakšala daljnji rad na našoj aplikaciji.
+		 \\Druga je faza obuhvatila implementaciju rješenja, testiranje rješenja i izradu konačne dokumentacije. Dokumentirani su UML dijagrami stanja, aktivnosti, komponenti i razmještaja koji prikazuju ključne dijelove programskog rješenja. Bez obzira na dobro definiranu strukturu projekta u prvoj fazi, implementacija je zahtijevala mnogo truda i konstantne komunikacije između članova tima. 
+		 \\Komunikacija se odvijala putem \textit{WhatsAppa} za brže konzultacije i dogovaranje online sastanaka koji su se održavali putem \textit{Teamsa}. U timu je vladala pozitivna atmosfera što je olakšavalo rad.
+		 \\Sudjelovanje i rad na projektu pokazalo se kao vrlo poučno i korisno iskustvo. Članovi tima upoznali su se s mnogim novim alatima i okruženjima, ali i s radom u tim s kojim se dosada u ovoj mjeri nisu susreli. Članovi tima zadovoljni su što su uspjeli ostvariti svoj cilj te što su usvojili mnoge vještine koje će im koristiti u daljnjem obrazovanju i budućem radu.
 		
 		\eject 
