--- a/dokumentacija/Specifikacija_programske_potpore.tex
+++ b/dokumentacija/Specifikacija_programske_potpore.tex
@@ -95,7 +95,7 @@
 \noindent \underbar{\textbf{UC1 -Pregled oglasa}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Neregistrirani korisnik
+	\item \textbf{Glavni sudionik: }Neprijavljeni korisnik
 	\item  \textbf{Cilj:}Pregledati oglase soba
 	\item  \textbf{Sudionici:} baza podataka
 	\item  \textbf{Preduvjet:} 
@@ -183,7 +183,7 @@
 \noindent \underbar{\textbf{UC4 -Objavljivanje oglasa}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Registrirani korisnik
+	\item \textbf{Glavni sudionik: }Prijavljeni korisnik
 	\item  \textbf{Cilj:}Objaviti oglas
 	\item  \textbf{Sudionici:} baza podataka,poslužitelj
 	\item  \textbf{Preduvjet:} Korisnik je prijavljen u sustav
@@ -203,7 +203,7 @@
 \noindent \underbar{\textbf{UC5 -Pregled mogućih zamjena }}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Registrirani korisnik
+	\item \textbf{Glavni sudionik: }Prijavljeni korisnik
 	\item  \textbf{Cilj:}Pregledati ponuđene moguće zamjene koje odgovaraju kriterijima korisnika
 	\item  \textbf{Sudionici:} baza podataka, poslužitelj
 	\item  \textbf{Preduvjet:} Korisnik je prijavljen i ima aktivan oglas
@@ -236,7 +236,7 @@
 \noindent \underbar{\textbf{UC7 -Lajkanje oglasa}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Registrirani korisnik
+	\item \textbf{Glavni sudionik: }Prijavljeni korisnik
 	\item  \textbf{Cilj:}"Lajkati" oglase soba koje korisnika zanimaju
 	\item  \textbf{Sudionici:} baza podataka, poslužitelj
 	\item  \textbf{Preduvjet:} Korisnik je prijavljen, ima aktivan oglas i barem jedan oglas odgovara njegovim kriterijima
@@ -253,7 +253,7 @@
 \noindent \underbar{\textbf{UC8 -Mjenjanje Lajka}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Registrirani korisnik
+	\item \textbf{Glavni sudionik: }Prijavljeni korisnik
 	\item  \textbf{Cilj:}Promijeniti razinu "lajka" ili maknuti lajk
 	\item  \textbf{Sudionici:} baza podataka, poslužitelj
 	\item  \textbf{Preduvjet:} Korisnik je prijavljen, ima aktivan oglas,barem jedan oglas odgovara njegovim kriterijima
@@ -271,7 +271,7 @@
 \noindent \underbar{\textbf{UC9 -Pregled mojih oglasa}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Registrirani korisnik
+	\item \textbf{Glavni sudionik: }Prijavljeni korisnik
 	\item  \textbf{Cilj:}Vidjeti sve svoje oglase
 	\item  \textbf{Sudionici:} baza podataka, poslužitelj
 	\item  \textbf{Preduvjet:} Korisnik je prijavljen i ima oglas
@@ -288,7 +288,7 @@
 \noindent \underbar{\textbf{UC10 -Uređivanje oglasa}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Registrirani korisnik
+	\item \textbf{Glavni sudionik: }Prijavljeni korisnik
 	\item  \textbf{Cilj:}Urediti već postojeći oglas
 	\item  \textbf{Sudionici:} baza podataka, poslužitelj
 	\item  \textbf{Preduvjet:} Korisnik je prijavljen i ima aktivan oglas
@@ -311,7 +311,7 @@
 \noindent \underbar{\textbf{UC11 -Brisanje oglasa}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Registrirani korisnik
+	\item \textbf{Glavni sudionik: }Prijavljeni korisnik
 	\item  \textbf{Cilj:}Izbrisati oglas
 	\item  \textbf{Sudionici:} baza podataka, poslužitelj
 	\item  \textbf{Preduvjet:} Korisnik je prijavljen i ima oglas
@@ -330,7 +330,7 @@
 \noindent \underbar{\textbf{UC12 -Pregled profila}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Registrirani korisnik
+	\item \textbf{Glavni sudionik: }Prijavljeni korisnik
 	\item  \textbf{Cilj:}Vidjeti svoje osobne podatke
 	\item  \textbf{Sudionici:} baza podataka, poslužitelj
 	\item  \textbf{Preduvjet:} Korisnik je prijavljen
@@ -368,7 +368,7 @@
 \noindent \underbar{\textbf{UC14 -Brisanje profila}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Registrirani korisnik
+	\item \textbf{Glavni sudionik: }Prijavljeni korisnik
 	\item  \textbf{Cilj:}Vidjeti svoje osobne podatke
 	\item  \textbf{Sudionici:} baza podataka, poslužitelj
 	\item  \textbf{Preduvjet:} Korisnik je prijavljen
@@ -387,7 +387,7 @@
 \noindent \underbar{\textbf{UC15 -Potvrđivanje zamjene}}
 \begin{packed_item}
 	
-	\item \textbf{Glavni sudionik: }Registrirani  korisnik
+	\item \textbf{Glavni sudionik: }Prijavljeni korisnik
 	\item  \textbf{Cilj:}Potvrditi zamjenu sobe
 	\item  \textbf{Sudionici:} baza podataka, poslužitelj
 	\item  \textbf{Preduvjet:} Korisnik je prijavljen, sve uključene strane su "lajkale" oglas
@@ -513,9 +513,6 @@
 	\item Nadogradnja sustava ne smije narušavati postojeće funkcionalnosti sustava
 	\item Aplikacija treba biti izvedena kao web aplikacija prilagođena (engl. responsive) mobilnom uređaju
 \end{packed_enum}
-
-
-
 
 
 
