Mala izmjena za neregistriranog korisnika

--- a/dokumentacija/Specifikacija_programske_potpore.tex
+++ b/dokumentacija/Specifikacija_programske_potpore.tex
@@ -23,7 +23,7 @@
 	\begin{packed_enum}
 		
 		\item vidjeti sve oglase
-		\item se registrirati, za stvaranje korisničkog računa potrebni su: ime, prezime,korisničko ime, lozinka, e-mail, JMBAG
+		\item se registrirati, za stvaranje korisničkog računa potrebni su: ime, prezime,korisničko ime, lozinka, e-mail, JMBAG, grad u kojem studira
 		
 	\end{packed_enum}
 	
