--- a/dokumentacija/Specifikacija_programske_potpore.tex
+++ b/dokumentacija/Specifikacija_programske_potpore.tex
@@ -46,6 +46,7 @@
 			\item 1-sviđa mi se
 			\item 2-sviđa mi se jako
 			\item 3-to je to
+			\item Ne prikazuj više ovaj oglas
 			
 		\end{packed_enum}
 		
