--- a/dokumentacija/Specifikacija_programske_potpore.tex
+++ b/dokumentacija/Specifikacija_programske_potpore.tex
@@ -124,7 +124,7 @@
 	
 	\item[] \begin{packed_enum}
 		
-		\item Korisnik pritišće tipku "Registriraj se"
+		\item Korisnik pritišće tipku "Registracija"
 		\item Sustav otvara stranicu za registraciju
 		\item Korisnik unosi potrebne podatke
 		\item Sustav provjerava ispravnost podataka
