--- a/dokumentacija/springRolice_rev1.tex
+++ b/dokumentacija/springRolice_rev1.tex
@@ -21,6 +21,8 @@
 \usepackage{hyperref}
 \usepackage{fancyhdr}
 
+\usepackage{subcaption}
+
 \usepackage{float}
 \usepackage{setspace}
 \restylefloat{table}
@@ -67,7 +69,7 @@
 
 \pagestyle{fancy}
 \lhead{Programsko inženjerstvo}
-\rhead{Projektni zadatak}
+\rhead{Zamjena sobe}
 \lfoot{springRolice}
 \cfoot{stranica \thepage/\pageref{LastPage}}
 \rfoot{\today}
@@ -87,8 +89,8 @@
 			
 			\vspace*{\stretch{3.0}}
 			
-			\huge Zamjena soba\\
-			\Large Dokumentacija, Rev. \textit{1}\\
+			\huge Zamjena sobe\\
+			\Large Dokumentacija, Rev. \textit{2}\\
 			
 			\vspace*{\stretch{12.0}}
 			\normalsize
@@ -97,7 +99,7 @@
 			
 			
 			\vspace*{\stretch{1.0}}
-			Datum predaje: \textit{13. 11. 2020.}\\
+			Datum predaje: \textit{14. 1. 2021.}\\
 			
 			\vspace*{\stretch{4.0}}
 			
@@ -130,10 +132,11 @@
 	\endgroup
 	\addcontentsline{toc}{chapter}{Indeks slika i dijagrama}
 	
-	\include{Dodatak}
+	
 	
 	\eject 
 	
+	\include{Dodatak}
 	
 	
 \end{document} %naredbe i tekst nakon ove naredbe ne ulaze u izgrađen dokument 
